docs: adiciona docs de buyers
